# flux-power-monitor

./: .gitignore  :w  Makefile  Makefile.am  README.md  TODO_PATKI  configure.ac  flux.sh  flux_pwr_mgr.c  load.sh  reduce.c  reduce_json.c  salloc.sh  submit_covid19.sh  tags  test_powercap_cb.sh  unload.sh
app-submit-scripts/: submit_lenet.sh
config/: ax_flux_core.m4  config.h  config.h.in  config.h.in~
lassen-scripts/: flux.sh  flux_proxy.sh  lbann_flux.sh  lbann_flux_proxy.sh
old-outputs/: Sep1-covid19-test  covid19.out  covid19_8_nodes_initial_test  first_working_ex  first_working_ex_2  lenet.out  mid-run-nvidia-smi-covid19-Sep1
quartz-scripts/: salloc.sh
scripts/: 6075824.out  flux_proxy.sh  load.sh  load_flux.sh  load_power_manager.sh  load_power_monitor.sh  power_query.py
scripts/input.in/: sta10.txt
scripts/lassen-scripts/: f2kARpdUT_1694649800892779-1694649811643703.csv  f7AKKXUNb_1694731104469249-1694731108024014.csv  f8svsie1d_1694731330498465-1694731391086968.csv  fDpbin4P_1694650512058202-1694650522771724.csv  flux.sh  flux.uri  flux_proxy.sh  flux_proxy_v51.sh  fyy1JS95_1689182992107298-1689183003196948.csv  lalloc.sh  lbann_flux.sh  lbann_flux_proxy.sh  load_flux.sh  load_power_manager.sh  load_power_monitor.sh  load_pwr_monitor.sh  power_query.py  qs_flux.sh  step2_patki_flux.sh  step3_patki_flux_proxy.sh  step4_patki_load_power_mgr.sh  test.sh  unload_power_manager.sh
scripts/tioga-scripts/: flux.uri  load_power_manager.sh  load_power_mgr.sh  power_query.py  step1_flux_mini_alloc.sh  step2_flux_start.sh  step3_flux_proxy.sh  tioga10-flux-2002054.core  unload_power_monitor.sh
src/: Makefile  flux_pwr_mgr.c
src/common/: Makefile.am  circular_buffer.c  circular_buffer.h  device_type.h  file_logger.c  file_logger.h  flux_pwr_logging.c  flux_pwr_logging.h  node_power_info.c  node_power_info.h  parse_util.c  parse_util.h  power_data.c  power_data.h  pwr_stats.h  response_power_data.c  response_power_data.h  retro_queue_buffer.c  retro_queue_buffer.h  system_config.h  util.c  util.h
src/flux_pwr_manager/: :  Makefile.am  ciruclar_buffer_test.c  cluster_pwr_mgr.c  cluster_pwr_mgr.h  constants.h  device_power_info.c  device_power_info.h  dynamic_job_map.c  dynamic_job_map.h  flux_pwr_logging.h  flux_pwr_manager.c  job_data.c  job_data.h  job_hash.c  job_hash.h  job_manager_data.h  job_notification.c  job_power_util.c  job_power_util.h  job_pwr_mgr.c  job_pwr_mgr.h  json_utility.c  json_utility.h  l  lf  lg  node_capabilities.h  node_capability.h  node_power_profile.c  node_power_profile.h  output_program  power_capping_util.c  power_capping_util.h  power_data.c  power_data.h  power_data_map.h  power_monitor.h  power_policy.h  power_util.c  (+5 more)
src/flux_pwr_manager/node_manager/: Makefile.am  fft_predictor.c  fft_predictor.h  l  ls  node_data.h  node_job_info.c  node_job_info.h  node_manager.c  node_manager.h  node_util.c  node_util.h  power_monitor.c  power_monitor.h  system_config.h  tracker.c  tracker.h
src/flux_pwr_manager/power_policies/: Makefile.am  current_power_policy.c  current_power_policy.h  current_power_strategy.c  current_power_strategy.h  dynamic_power_policy.c  dynamic_power_policy.h  dynamic_power_strategy.c  dynamic_power_strategy.h  fft_based_power_policy.c  fft_based_power_policy.h  policy_mgr.c  policy_mgr.h  power_policy.h  power_policy_config.h  power_policy_manager.h  uniform_power_policy.c  uniform_power_policy.h  uniform_power_strategy.c  uniform_power_strategy.h  uniform_pwr_policy.c  uniform_pwr_policy.h
src/flux_pwr_monitor/: Makefile  Makefile.am  Makefile.in  flux_pwr_monitor.c  flux_pwr_monitor.h  flux_pwr_monitor.la  flux_pwr_monitor_la-flux_pwr_monitor.lo  root_node_level_info.c  root_node_level_info.h
src/flux_pwr_monitor/.deps/: flux_pwr_monitor_la-flux_pwr_monitor.Plo
src/flux_pwr_monitor/.libs/: flux_pwr_monitor.la  flux_pwr_monitor.lai  flux_pwr_monitor.so.0  flux_pwr_monitor.so.0.0.0
style-scripts/: check-code-format.sh
tioga-scripts/: flux.uri  flux_mini_alloc.sh  flux_start.sh  unload_power_mgr.sh
