AM_CPPFLAGS = \
	-I$(top_srcdir)
noinst_LTLIBRARIES=libcommon.la
libcommon_la_SOURCES=	\
											retro_queue_buffer.c \
											retro_queue_buffer.h \
											node_power_info.c \
											node_power_info.h \
											response_power_data.h \
											response_power_data.c \
											power_data.h \
											power_data.c \
											flux_pwr_logging.c \
											util.h \
											util.c
