AM_CPPFLAGS = \
	-I$(top_srcdir)
noinst_LTLIBRARIES=libcommon.la
libcommon_la_SOURCES=	\
											retro_queue_buffer.c \
											node_power_info.c \
											response_power_data.c \
											power_data.c \
											flux_pwr_logging.c \
											parse_util.c \
											file_logger.c \
											util.c
